@@ -1,4 +1,5 @@
 - more accurate deps version
+- name_encode and name_decode
 
 2.007 2020-11-18
 - add Rule.recipe_raw
